--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
 name = "minihttp"
-version = "0.1.9"
-authors = ["p00s <pin9sb@gmail.com>"]
+version = "0.2.0"
+authors = ["Erich Schudt <erich_schudt@live.com>"]
 license = "MIT/Apache-2.0"
 description = "minihttp is a simple and lightweight http client lib for rust."
 include = ["src/*.rs", "Cargo.toml"]
-publish = true
-documentation = "https://docs.rs/minihttp"
-homepage = "https://github.com/p00s/minihttp"
-repository = "https://github.com/p00s/minihttp"
 
 [dependencies]
 miniurl = "0.1.3"
